--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -11,7 +11,7 @@
         <h2>Choisi ton statut</h2>
 
         <a href="/clients" class="button__link">Clients</a>
-
+        <a href="/techniciens" class="button__link">Techniciens</a>
     </div>
 </body>
 </html>
