--- a/views/clients/client-validation-error.ejs
+++ b/views/clients/client-validation-error.ejs
@@ -20,6 +20,7 @@
     </header>
 
     <main>
+        <h1>Nom ou Numéro de série incorrect</h1>
       <form method="POST" id='client_validation_form'>
         <div class="form-control">
           <label for="title">Nom</label>
@@ -29,8 +30,9 @@
           <label for="title">Numéro de série</label>
           <input type="text" name="N_serie" id="N_serie" />
         </div>
-        <button class="btn" type="submit">Se connecter</button>
-        <button class="btn" type="reset">Annuler</button>
+        <button class="btn" type="submit">Submit</button>
+        <button class="btn" type="reset">Cancel</button>
+        
       </form>
     </main>
   </body>
