--- a/views/clients/client.ejs
+++ b/views/clients/client.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="welcome">
-        <h2>choissez votre genre </h2>
+        <h2>Vous êtes : </h2>
 
         <a href="/clients/nouveau-client" class="button__link">Nouveau Client</a>
         
