--- a/views/techniciens/technicien-validation.ejs
+++ b/views/techniciens/technicien-validation.ejs
@@ -29,8 +29,8 @@
           <label for="title">Nom</label>
           <input type="text" name="Nom" id="Nom" />
         </div>
-        <button class="btn" type="submit">Submit</button>
-        <button class="btn" type="reset">Cancel</button>
+        <button class="btn" type="submit">Se connecter</button>
+        <button class="btn" type="reset">Annuler</button>
       </form>
     </main>
   </body>
