--- a/views/techniciens/technicien.ejs
+++ b/views/techniciens/technicien.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="welcome">
-        <h2>choisez Reparations </h2>
+        <h2>choisissez ce que vous souhaitez faire </h2>
 
         <a href="<%= formLink%>" class="button__link">modifier les Reparations</a>
         <a href="<%= reparLink%>" class="button__link">Mes Reparations</a>
