--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="welcome">
+        <h1>Bienvenu dans chez Dronerepaire</h1>
         <h2>Choisi ton statut</h2>
 
         <a href="/clients" class="button__link">Clients</a>
