--- a/views/clients/ancien_formule.ejs
+++ b/views/clients/ancien_formule.ejs
@@ -59,7 +59,7 @@
             <textarea rows="4" cols="50" name="commentaire" form="ancien_client_form" placeholder="Entrer votre commentaire"></textarea>
         </div>
         <button class="btn" type="submit">Modifier</button>
-        <button class="btn" type="reset">Cancel</button>
+        <button class="btn" type="reset">Annuler</button>
       </form>
     </main>
   </body>
