--- a/views/techniciens/tech_formule.ejs
+++ b/views/techniciens/tech_formule.ejs
@@ -49,7 +49,7 @@
                     <% } %>
                   </div>
                   <button class="btn" type="submit">Modifier</button>
-                  <button class="btn" type="reset">Cancel</button>
+                  <button class="btn" type="reset">Annuler</button>
               <% }else{ %>
                 <div class="reparCat__form">
                   <h1>Pas de Réparations</h1>
