--- a/views/techniciens/technicien.ejs
+++ b/views/techniciens/technicien.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/welcome.css">
     <title>Client</title>
 </head>
 <body>
     <div class="welcome">
-        <h2>choisissez ce que vous souhaitez faire </h2>
+        <h2>choisi Reparations </h2>
 
         <a href="<%= formLink%>" class="button__link">modifier les Reparations</a>
         <a href="<%= reparLink%>" class="button__link">Mes Reparations</a>
