--- a/views/clients/ancien-client.ejs
+++ b/views/clients/ancien-client.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/welcome.css">
     <title>Client</title>
 </head>
 <body>
     <div class="welcome">
+        <h2>choisi votre genre </h2>
 
-        <a href="<%= formLink %>" class="button__link">modifier ma réparation</a>
+        <a href="<%= formLink %>" class="button__link">modifier la formule</a>
         <a href="<%= reparLink %>" class="button__link">Mes Reparations</a>
     </div>
 </body>
