--- a/views/clients/ancien_formule.ejs
+++ b/views/clients/ancien_formule.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.css" />
     <title>Client</title>
   </head>
@@ -59,7 +61,7 @@
             <textarea rows="4" cols="50" name="commentaire" form="ancien_client_form" placeholder="Entrer votre commentaire"></textarea>
         </div>
         <button class="btn" type="submit">Modifier</button>
-        <button class="btn" type="reset">Annuler</button>
+        <button class="btn" type="reset">Cancel</button>
       </form>
     </main>
   </body>
