--- a/views/clients/client-validation.ejs
+++ b/views/clients/client-validation.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.css" />
     <title>Check Client</title>
   </head>
@@ -29,8 +31,8 @@
           <label for="title">Numéro de série</label>
           <input type="text" name="N_serie" id="N_serie" />
         </div>
-        <button class="btn" type="submit">Se connecter</button>
-        <button class="btn" type="reset">Annuler</button>
+        <button class="btn" type="submit">Submit</button>
+        <button class="btn" type="reset">Cancel</button>
       </form>
     </main>
   </body>
