--- a/views/clients/nouveau-client.ejs
+++ b/views/clients/nouveau-client.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.css" />
     <title>Client</title>
   </head>
@@ -12,6 +14,9 @@
           <li class="main-header__item">
             <a href="/">Demande de réparation</a>
           </li>
+          <!-- <li class="main-header__item">
+            <a href="#">Mes réparations</a>
+          </li> -->
         </ul>
       </nav>
     </header>
@@ -54,7 +59,7 @@
             <textarea rows="4" cols="50" name="commentaire" form="nouveau_client_form" placeholder="Entrer votre commentaire"></textarea>
         </div>
         <button class="btn" type="submit">Ajouter</button>
-        <button class="btn" type="reset">Annuler</button>
+        <button class="btn" type="reset">Cancel</button>
       </form>
     </main>
   </body>
