--- a/views/techniciens/tech_formule.ejs
+++ b/views/techniciens/tech_formule.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.css" />
     <title>Client</title>
   </head>
@@ -41,15 +43,15 @@
                             <label for="<%= item.id_repar_cat%>&<%=item.Nom_cat%>">
                                 <input type="radio" name="<%= item.id_repar_cat%>"  value="Fini">Fini 
                             </label>
-                            <label for="<%= item.id_repar_cat%>">
-                              <input type="radio" name="<%= item.id_repar_cat%>"  value="Impossible">Impossible
-                          </label></br>                            
+                            <label for="<%= item.id_repar_cat%>&<%=item.Nom_cat%>">
+                              <input type="radio" name="<%= item.id_repar_cat%>"  value="impossible">impossible 
+                          </label></br>
                         </div>
                     </div>
                     <% } %>
                   </div>
                   <button class="btn" type="submit">Modifier</button>
-                  <button class="btn" type="reset">Annuler</button>
+                  <button class="btn" type="reset">Cancel</button>
               <% }else{ %>
                 <div class="reparCat__form">
                   <h1>Pas de Réparations</h1>
