--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/welcome.css">
     <title>Welcome</title>
 </head>
 <body>
     <div class="welcome">
-        <h1>Bienvenu dans chez Dronerepaire</h1>
-        <h2>Choisi ton statut</h2>
+        <h2>choisi votre genre </h2>
 
         <a href="/clients" class="button__link">Clients</a>
+        
         <a href="/techniciens" class="button__link">Techniciens</a>
     </div>
 </body>
